--- a/09_reshape.qmd
+++ b/09_reshape.qmd
@@ -37,6 +37,7 @@ ambulance_stemi
 ------------------------------------------------------------------------
 
 ```{r}
+#| label: setup
 library(readxl)
 library(tidyverse)
 ```
